# unit8-public-project-starter

./: .dockerignore  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.agents/skills/agent-etl-scaffolder/: SKILL.md
.agents/skills/api-cli-parity/: SKILL.md
.agents/skills/architecture-boundaries/: SKILL.md
.agents/skills/dependency-hygiene/: SKILL.md
.agents/skills/docker-local-parity/: SKILL.md
.agents/skills/docstring-completeness/: SKILL.md
.agents/skills/env-sync/: SKILL.md
.agents/skills/frontend-starter-guidance/: SKILL.md
.agents/skills/observability-standards/: SKILL.md
.agents/skills/python-quality-gates/: SKILL.md
.agents/skills/scaffold-outcomes/: SKILL.md
.agents/skills/terraform-change-safety/: SKILL.md
.agents/skills/test-coverage-discipline/: SKILL.md
.change-quiz/: result.json
.github/workflows/: quality.yml
docs/: architecture.md  change-quiz.md  environment-variables.md  getting-started.md  infrastructure.md  local-vs-docker.md
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  chatkit-loader.test.ts  main.test.tsx  styles.css
infra/: AGENTS.md
src/: AGENTS.md
src/agentic_project_starter/: __init__.py  __main__.py
src/agentic_project_starter/agentic/: __init__.py  models.py  service.py  (+1 more)
tests/: conftest.py  test_api.py  test_change_quiz.py  test_chat_storage.py  test_cli.py  test_config.py  test_registries.py  test_runtime_openai.py
(+44 files in other folders)
